--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
         </section>
     </div>
     <script src="script.js"></script>
+
+   <center> <a href="politica.html"><h2>Política de Privacidad</h2></a></center>
 </body>
 </html>
